[gd_scene load_steps=3 format=3 uid="uid://b6mt1o03051uh"]

[ext_resource type="Script" uid="uid://c2wynkbn48rpc" path="res://scenes/ui/MarketScreen.gd" id="1"]
[ext_resource type="Theme" path="res://resources/themes/main_theme.tres" id="2"]

[node name="MarketScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2")
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.08, 0.12, 1)

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="SearchField" type="LineEdit" parent="TopBar"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
placeholder_text = "Item ID ara..."

[node name="SearchButton" type="Button" parent="TopBar"]
layout_mode = 2
text = "üîç Ara"

[node name="OrderBook" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="BuyOrders" type="VBoxContainer" parent="OrderBook"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="OrderBook/BuyOrders"]
layout_mode = 2
text = "Alƒ±≈ü Emirleri"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="OrderBook/BuyOrders"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="OrderBook/BuyOrders/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SellOrders" type="VBoxContainer" parent="OrderBook"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="OrderBook/SellOrders"]
layout_mode = 2
text = "Satƒ±≈ü Emirleri"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="OrderBook/SellOrders"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="OrderBook/SellOrders/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StatsPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 80.0
offset_right = 200.0
offset_bottom = 160.0
grow_horizontal = 2

[node name="HBox" type="HBoxContainer" parent="StatsPanel"]
layout_mode = 2

[node name="LowestSell" type="VBoxContainer" parent="StatsPanel/HBox"]
layout_mode = 2

[node name="Label" type="Label" parent="StatsPanel/HBox/LowestSell"]
layout_mode = 2
text = "En D√º≈ü√ºk Satƒ±≈ü"

[node name="Value" type="Label" parent="StatsPanel/HBox/LowestSell"]
layout_mode = 2
text = "0g"

[node name="HighestBuy" type="VBoxContainer" parent="StatsPanel/HBox"]
layout_mode = 2

[node name="Label" type="Label" parent="StatsPanel/HBox/HighestBuy"]
layout_mode = 2
text = "En Y√ºksek Alƒ±≈ü"

[node name="Value" type="Label" parent="StatsPanel/HBox/HighestBuy"]
layout_mode = 2
text = "0g"

[node name="LastTrade" type="VBoxContainer" parent="StatsPanel/HBox"]
layout_mode = 2

[node name="Label" type="Label" parent="StatsPanel/HBox/LastTrade"]
layout_mode = 2
text = "Son ƒ∞≈ülem"

[node name="Value" type="Label" parent="StatsPanel/HBox/LastTrade"]
layout_mode = 2
text = "0g"

[node name="Volume24h" type="VBoxContainer" parent="StatsPanel/HBox"]
layout_mode = 2

[node name="Label" type="Label" parent="StatsPanel/HBox/Volume24h"]
layout_mode = 2
text = "24s Hacim"

[node name="Value" type="Label" parent="StatsPanel/HBox/Volume24h"]
layout_mode = 2
text = "0"

[node name="PlaceOrderPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="TabContainer" type="TabContainer" parent="PlaceOrderPanel"]
layout_mode = 2
current_tab = 0

[node name="Buy" type="VBoxContainer" parent="PlaceOrderPanel/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="QuantitySpinBox" type="SpinBox" parent="PlaceOrderPanel/TabContainer/Buy"]
layout_mode = 2
min_value = 1.0
max_value = 1000.0
value = 1.0

[node name="PriceSpinBox" type="SpinBox" parent="PlaceOrderPanel/TabContainer/Buy"]
layout_mode = 2
min_value = 1.0
max_value = 1000000.0
value = 100.0

[node name="TotalLabel" type="Label" parent="PlaceOrderPanel/TabContainer/Buy"]
layout_mode = 2
text = "Toplam: 0 gold"

[node name="PlaceOrderButton" type="Button" parent="PlaceOrderPanel/TabContainer/Buy"]
layout_mode = 2
text = "Alƒ±≈ü Emri Ver"

[node name="Sell" type="VBoxContainer" parent="PlaceOrderPanel/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="QuantitySpinBox" type="SpinBox" parent="PlaceOrderPanel/TabContainer/Sell"]
layout_mode = 2
min_value = 1.0
max_value = 1000.0
value = 1.0

[node name="PriceSpinBox" type="SpinBox" parent="PlaceOrderPanel/TabContainer/Sell"]
layout_mode = 2
min_value = 1.0
max_value = 1000000.0
value = 100.0

[node name="TotalLabel" type="Label" parent="PlaceOrderPanel/TabContainer/Sell"]
layout_mode = 2
text = "Toplam: 0 gold (Fee: 0)"

[node name="PlaceOrderButton" type="Button" parent="PlaceOrderPanel/TabContainer/Sell"]
layout_mode = 2
text = "Satƒ±≈ü Emri Ver"

[node name="BottomBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="BackButton" type="Button" parent="BottomBar"]
layout_mode = 2
text = "‚óÄ Geri"

[node name="Spacer" type="Control" parent="BottomBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MyOrdersButton" type="Button" parent="BottomBar"]
layout_mode = 2
text = "Emirlerim"
